优化 warning